remove more styles:

--- a/src/less/ez-gridster.less
+++ b/src/less/ez-gridster.less
@@ -55,7 +55,7 @@
     }
 
 		.gridster-item-content {
-      position: absolute;
+      // position: absolute;
       z-index: 1;
 			height: 100%;
       width: 100%;
