--- a/src/less/ez-gridster.less
+++ b/src/less/ez-gridster.less
@@ -59,7 +59,7 @@
       z-index: 1;
 			height: 100%;
       width: 100%;
-      text-align: center;
+      text-align: left;
 		}
 
     .gridster-item-overlay {
