--- a/src/less/ez-gridster.less
+++ b/src/less/ez-gridster.less
@@ -28,6 +28,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
     z-index: 3;
     position: absolute;
     height: 0;
